# smarc

./: .gitignore  CMakeLists.txt
docs/: getting-started.md  index.md  smicro.md  smile.md
docs/_layouts/: default.html
smem/src/: MemCtrl.cpp
smesh/: CMakeLists.txt  README.md
smesh/include/: SmeshDevice.hpp  SmeshMemory.hpp  SmeshState.hpp  SmeshTypes.hpp
smesh/src/: SmeshDevice.cpp  SmeshShell.cpp  SmeshShell.hpp  tb_smesh_m0.cpp  tb_smesh_m3.cpp
smicro/: CMakeLists.txt  README.md
smicro/src/: AccelArraySumSoc.hpp  AccelMemBridge.cpp  AccelMemBridge.hpp  MemTester.cpp  MemTester.hpp  RvCore.cpp  RvCore.hpp  SoC.cpp  SoC.hpp  Tile1Core.cpp  Tile1Core.hpp  tb_smicro.cpp
smile/: CMakeLists.txt  README.md
smile/docs/: accel_port.md
smile/include/: AccelArraySum.hpp  AccelDemoAdd.hpp  AccelPort.hpp  Debugger.hpp  DemoAddAccel.hpp  Diagnostics.hpp  Instruction.hpp  Tile1.hpp  Tile1_exec.hpp
smile/progs/: prog.elf  smexit.c  smurf.c  smurf_debug.c  smurf_threads.c
smile/progs/core/: README.md  bitwise_imm_test.c  branch_bxx_test.c  fence_test.c  load_bh_test.c  rtype_logic_test.c  rtype_shift_test.c  shift_ri_test.c
smile/progs/sci/: accel_sum_test.c  accel_sum_unsupported.c  hmm_step.c  threshold_lpv.c
smile/src/: AccelArraySum.cpp  AccelDemoAdd.cpp  Debugger.cpp  DemoAddAccel.cpp  Instruction.cpp  Tile1.cpp  Tile1_exec.cpp  tb_tile1.cpp
